# desafio-tecnico-int

./: .gitignore  README.md
database-queries/: README.md  docker-compose.yml
database-queries/scripts/: 01_create_table_operadoras.sql  02_create_table_demostracoes_contabeis.sql  03_staging_demonstracoes_contabeis.sql  04_import_data_operadoras.sql  05_import_demonstracoes.sql  06_query_maiores_despesas_categorias.sql  07_query_maiores_despesas_categorias_ultimo_ano.sql
projeto-pdf/: README.md  requirements.txt  setup.py
projeto-pdf/data/output/: procedimentos_ans.csv
projeto-pdf/src/: main.py
projeto-pdf/src/config/: paths.py
projeto-pdf/src/extract/: __init__.py  pdf_extractor.py
projeto-pdf/src/process/: __init__.py  data_processor.py
projeto-pdf/src/utils/: __init__.py  io.py
teste-api/: README.MD  docker-compose.yml
teste-api/backend/: .dockerignore  .env.sample  Dockerfile  db.sqlite3  entrypoint.sh  pyproject.toml  requirements.txt
teste-api/backend/config/: settings.py  urls.py
teste-api/backend/core/management/commands/: import_operadoras.py
teste-api/backend/core/migrations/: 0001_initial.py
teste-api/backend/core/models/: __init__.py  operadora.py
teste-api/backend/core/serializers/: __init__.py  operadora.py
teste-api/backend/core/views/: __init__.py  operadora.py
teste-api/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
teste-api/frontend/src/: App.vue  main.js
teste-api/frontend/src/components/: DefaultDashBoard.vue  index.js
teste-api/nginx/: default.conf
web-scraping/: README.md  pom.xml
(+15 files in other folders)
