[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "GabrielLima2803", email = "gabriellima2803@gmail.com"},
]
dependencies = ["django>=5.1.7", "djangorestframework>=3.16.0", "django-cors-headers>=4.7.0", "psycopg2>=2.9.10", "psycopg2-binary>=2.9.10", "gunicorn>=23.0.0", "uvicorn>=0.34.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"